fix #44301: Mytime - The timeline will be out of border when the last shift is ended at 45

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
@@ -159,10 +159,11 @@
 
 .weekview-timeline {
 	width: 31px;
-	height: 792px;
+	height: 796px;
 	background: transparent;
 	border-right: 1px solid #dfdfdf;
 	position: relative;
+	margin-bottom: 20px;
 }
 
 .weekview-timeline-label {
